LangParser.py
# Generated from Lang.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class LangParser ( Parser ):

    grammarFileName = "Lang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'{'", "'}'", "'function'", 
                     "'if('", "'while('", "'>='", "'<='", "'>'", "'<'", 
                     "'=='", "'int'", "'double'", "'str'", "'write('", "'read'", 
                     "'='", "<INVALID>", "<INVALID>", "'+'", "'-'", "'*'", 
                     "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "FUNCTION", "IF", "WHILE", "GE", "LE", 
                      "GT", "LT", "EQ", "INTEGER", "DOUBLE", "STR", "WRITE", 
                      "READ", "ASSIGN", "ID", "STRING", "OP_ADD", "OP_SUB", 
                      "OP_MUL", "OP_DIV", "INT", "REAL", "NUM", "NEWLINE", 
                      "WS" ]

    RULE_prog = 0
    RULE_expr = 1
    RULE_operation = 2
    RULE_value = 3
    RULE_write = 4
    RULE_read = 5
    RULE_typ = 6
    RULE_assign = 7
    RULE_number = 8
    RULE_ifExpr = 9
    RULE_whileExpr = 10
    RULE_function = 11
    RULE_comp = 12

    ruleNames =  [ "prog", "expr", "operation", "value", "write", "read", 
                   "typ", "assign", "number", "ifExpr", "whileExpr", "function", 
                   "comp" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    FUNCTION=5
    IF=6
    WHILE=7
    GE=8
    LE=9
    GT=10
    LT=11
    EQ=12
    INTEGER=13
    DOUBLE=14
    STR=15
    WRITE=16
    READ=17
    ASSIGN=18
    ID=19
    STRING=20
    OP_ADD=21
    OP_SUB=22
    OP_MUL=23
    OP_DIV=24
    INT=25
    REAL=26
    NUM=27
    NEWLINE=28
    WS=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(LangParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(LangParser.NEWLINE)
            else:
                return self.getToken(LangParser.NEWLINE, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.ExprContext)
            else:
                return self.getTypedRuleContext(LangParser.ExprContext,i)


        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.FunctionContext)
            else:
                return self.getTypedRuleContext(LangParser.FunctionContext,i)


        def getRuleIndex(self):
            return LangParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = LangParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LangParser.T__0) | (1 << LangParser.FUNCTION) | (1 << LangParser.IF) | (1 << LangParser.WHILE) | (1 << LangParser.WRITE) | (1 << LangParser.ID) | (1 << LangParser.STRING) | (1 << LangParser.INT) | (1 << LangParser.REAL) | (1 << LangParser.NEWLINE))) != 0):
                self.state = 28
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [LangParser.T__0, LangParser.IF, LangParser.WHILE, LangParser.WRITE, LangParser.ID, LangParser.STRING, LangParser.INT, LangParser.REAL]:
                    self.state = 26
                    self.expr()
                    pass
                elif token in [LangParser.FUNCTION]:
                    self.state = 27
                    self.function()
                    pass
                elif token in [LangParser.NEWLINE]:
                    pass
                else:
                    pass
                self.state = 30
                self.match(LangParser.NEWLINE)
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 36
            self.match(LangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def operation(self):
            return self.getTypedRuleContext(LangParser.OperationContext,0)


        def write(self):
            return self.getTypedRuleContext(LangParser.WriteContext,0)


        def read(self):
            return self.getTypedRuleContext(LangParser.ReadContext,0)


        def assign(self):
            return self.getTypedRuleContext(LangParser.AssignContext,0)


        def ifExpr(self):
            return self.getTypedRuleContext(LangParser.IfExprContext,0)


        def whileExpr(self):
            return self.getTypedRuleContext(LangParser.WhileExprContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)




    def expr(self):

        localctx = LangParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        try:
            self.state = 44
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.operation(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.write()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 40
                self.read()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 41
                self.assign()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 42
                self.ifExpr()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 43
                self.whileExpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return LangParser.RULE_operation

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class InfixExprContext(OperationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.OperationContext
            super().__init__(parser)
            self.left = None # OperationContext
            self.op = None # Token
            self.right = None # OperationContext
            self.copyFrom(ctx)

        def operation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.OperationContext)
            else:
                return self.getTypedRuleContext(LangParser.OperationContext,i)

        def OP_MUL(self):
            return self.getToken(LangParser.OP_MUL, 0)
        def OP_DIV(self):
            return self.getToken(LangParser.OP_DIV, 0)
        def OP_ADD(self):
            return self.getToken(LangParser.OP_ADD, 0)
        def OP_SUB(self):
            return self.getToken(LangParser.OP_SUB, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInfixExpr" ):
                listener.enterInfixExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInfixExpr" ):
                listener.exitInfixExpr(self)


    class NumberExprContext(OperationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.OperationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def value(self):
            return self.getTypedRuleContext(LangParser.ValueContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumberExpr" ):
                listener.enterNumberExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumberExpr" ):
                listener.exitNumberExpr(self)


    class ParensExprContext(OperationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a LangParser.OperationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def operation(self):
            return self.getTypedRuleContext(LangParser.OperationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParensExpr" ):
                listener.enterParensExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParensExpr" ):
                listener.exitParensExpr(self)



    def operation(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = LangParser.OperationContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_operation, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LangParser.T__0]:
                localctx = LangParser.ParensExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 47
                self.match(LangParser.T__0)
                self.state = 48
                self.operation(0)
                self.state = 49
                self.match(LangParser.T__1)
                pass
            elif token in [LangParser.ID, LangParser.STRING, LangParser.INT, LangParser.REAL]:
                localctx = LangParser.NumberExprContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 51
                self.value()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 62
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 60
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = LangParser.InfixExprContext(self, LangParser.OperationContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_operation)
                        self.state = 54
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 55
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==LangParser.OP_MUL or _la==LangParser.OP_DIV):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 56
                        localctx.right = self.operation(4)
                        pass

                    elif la_ == 2:
                        localctx = LangParser.InfixExprContext(self, LangParser.OperationContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_operation)
                        self.state = 57
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 58
                        localctx.op = self._input.LT(1)
                        _la = self._input.LA(1)
                        if not(_la==LangParser.OP_ADD or _la==LangParser.OP_SUB):
                            localctx.op = self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 59
                        localctx.right = self.operation(3)
                        pass

             
                self.state = 64
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def number(self):
            return self.getTypedRuleContext(LangParser.NumberContext,0)


        def ID(self):
            return self.getToken(LangParser.ID, 0)

        def STRING(self):
            return self.getToken(LangParser.STRING, 0)

        def getRuleIndex(self):
            return LangParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = LangParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_value)
        try:
            self.state = 68
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [LangParser.INT, LangParser.REAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.number()
                pass
            elif token in [LangParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 66
                self.match(LangParser.ID)
                pass
            elif token in [LangParser.STRING]:
                self.enterOuterAlt(localctx, 3)
                self.state = 67
                self.match(LangParser.STRING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WriteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WRITE(self):
            return self.getToken(LangParser.WRITE, 0)

        def operation(self):
            return self.getTypedRuleContext(LangParser.OperationContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_write

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWrite" ):
                listener.enterWrite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWrite" ):
                listener.exitWrite(self)




    def write(self):

        localctx = LangParser.WriteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_write)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(LangParser.WRITE)
            self.state = 71
            self.operation(0)
            self.state = 72
            self.match(LangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReadContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(LangParser.ASSIGN, 0)

        def READ(self):
            return self.getToken(LangParser.READ, 0)

        def typ(self):
            return self.getTypedRuleContext(LangParser.TypContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_read

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRead" ):
                listener.enterRead(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRead" ):
                listener.exitRead(self)




    def read(self):

        localctx = LangParser.ReadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_read)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.match(LangParser.ID)
            self.state = 75
            self.match(LangParser.ASSIGN)
            self.state = 76
            self.match(LangParser.READ)
            self.state = 77
            self.match(LangParser.T__0)
            self.state = 78
            self.typ()
            self.state = 79
            self.match(LangParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(LangParser.INTEGER, 0)

        def DOUBLE(self):
            return self.getToken(LangParser.DOUBLE, 0)

        def STR(self):
            return self.getToken(LangParser.STR, 0)

        def getRuleIndex(self):
            return LangParser.RULE_typ

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTyp" ):
                listener.enterTyp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTyp" ):
                listener.exitTyp(self)




    def typ(self):

        localctx = LangParser.TypContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typ)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LangParser.INTEGER) | (1 << LangParser.DOUBLE) | (1 << LangParser.STR))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(LangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(LangParser.ASSIGN, 0)

        def operation(self):
            return self.getTypedRuleContext(LangParser.OperationContext,0)


        def getRuleIndex(self):
            return LangParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = LangParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(LangParser.ID)
            self.state = 84
            self.match(LangParser.ASSIGN)
            self.state = 85
            self.operation(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(LangParser.INT, 0)

        def REAL(self):
            return self.getToken(LangParser.REAL, 0)

        def getRuleIndex(self):
            return LangParser.RULE_number

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumber" ):
                listener.enterNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumber" ):
                listener.exitNumber(self)




    def number(self):

        localctx = LangParser.NumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_number)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            _la = self._input.LA(1)
            if not(_la==LangParser.INT or _la==LangParser.REAL):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # ValueContext
            self.right = None # ValueContext

        def IF(self):
            return self.getToken(LangParser.IF, 0)

        def comp(self):
            return self.getTypedRuleContext(LangParser.CompContext,0)


        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.ValueContext)
            else:
                return self.getTypedRuleContext(LangParser.ValueContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(LangParser.NEWLINE)
            else:
                return self.getToken(LangParser.NEWLINE, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.ExprContext)
            else:
                return self.getTypedRuleContext(LangParser.ExprContext,i)


        def getRuleIndex(self):
            return LangParser.RULE_ifExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfExpr" ):
                listener.enterIfExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfExpr" ):
                listener.exitIfExpr(self)




    def ifExpr(self):

        localctx = LangParser.IfExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_ifExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(LangParser.IF)
            self.state = 90
            localctx.left = self.value()
            self.state = 91
            self.comp()
            self.state = 92
            localctx.right = self.value()
            self.state = 93
            self.match(LangParser.T__1)
            self.state = 94
            self.match(LangParser.T__2)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LangParser.T__0) | (1 << LangParser.IF) | (1 << LangParser.WHILE) | (1 << LangParser.WRITE) | (1 << LangParser.ID) | (1 << LangParser.STRING) | (1 << LangParser.INT) | (1 << LangParser.REAL) | (1 << LangParser.NEWLINE))) != 0):
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LangParser.T__0) | (1 << LangParser.IF) | (1 << LangParser.WHILE) | (1 << LangParser.WRITE) | (1 << LangParser.ID) | (1 << LangParser.STRING) | (1 << LangParser.INT) | (1 << LangParser.REAL))) != 0):
                    self.state = 95
                    self.expr()


                self.state = 98
                self.match(LangParser.NEWLINE)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 104
            self.match(LangParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.left = None # Token
            self.right = None # ValueContext

        def WHILE(self):
            return self.getToken(LangParser.WHILE, 0)

        def comp(self):
            return self.getTypedRuleContext(LangParser.CompContext,0)


        def ID(self):
            return self.getToken(LangParser.ID, 0)

        def value(self):
            return self.getTypedRuleContext(LangParser.ValueContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(LangParser.NEWLINE)
            else:
                return self.getToken(LangParser.NEWLINE, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.ExprContext)
            else:
                return self.getTypedRuleContext(LangParser.ExprContext,i)


        def getRuleIndex(self):
            return LangParser.RULE_whileExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileExpr" ):
                listener.enterWhileExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileExpr" ):
                listener.exitWhileExpr(self)




    def whileExpr(self):

        localctx = LangParser.WhileExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_whileExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(LangParser.WHILE)
            self.state = 107
            localctx.left = self.match(LangParser.ID)
            self.state = 108
            self.comp()
            self.state = 109
            localctx.right = self.value()
            self.state = 110
            self.match(LangParser.T__1)
            self.state = 111
            self.match(LangParser.T__2)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LangParser.T__0) | (1 << LangParser.IF) | (1 << LangParser.WHILE) | (1 << LangParser.WRITE) | (1 << LangParser.ID) | (1 << LangParser.STRING) | (1 << LangParser.INT) | (1 << LangParser.REAL) | (1 << LangParser.NEWLINE))) != 0):
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LangParser.T__0) | (1 << LangParser.IF) | (1 << LangParser.WHILE) | (1 << LangParser.WRITE) | (1 << LangParser.ID) | (1 << LangParser.STRING) | (1 << LangParser.INT) | (1 << LangParser.REAL))) != 0):
                    self.state = 112
                    self.expr()


                self.state = 115
                self.match(LangParser.NEWLINE)
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 121
            self.match(LangParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.fname = None # Token
            self.params = None # Token

        def FUNCTION(self):
            return self.getToken(LangParser.FUNCTION, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(LangParser.ID)
            else:
                return self.getToken(LangParser.ID, i)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(LangParser.NEWLINE)
            else:
                return self.getToken(LangParser.NEWLINE, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(LangParser.ExprContext)
            else:
                return self.getTypedRuleContext(LangParser.ExprContext,i)


        def getRuleIndex(self):
            return LangParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)




    def function(self):

        localctx = LangParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(LangParser.FUNCTION)
            self.state = 124
            localctx.fname = self.match(LangParser.ID)
            self.state = 125
            self.match(LangParser.T__0)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==LangParser.ID:
                self.state = 126
                localctx.params = self.match(LangParser.ID)
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(LangParser.T__1)
            self.state = 133
            self.match(LangParser.T__2)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LangParser.T__0) | (1 << LangParser.IF) | (1 << LangParser.WHILE) | (1 << LangParser.WRITE) | (1 << LangParser.ID) | (1 << LangParser.STRING) | (1 << LangParser.INT) | (1 << LangParser.REAL) | (1 << LangParser.NEWLINE))) != 0):
                self.state = 135
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << LangParser.T__0) | (1 << LangParser.IF) | (1 << LangParser.WHILE) | (1 << LangParser.WRITE) | (1 << LangParser.ID) | (1 << LangParser.STRING) | (1 << LangParser.INT) | (1 << LangParser.REAL))) != 0):
                    self.state = 134
                    self.expr()


                self.state = 137
                self.match(LangParser.NEWLINE)
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 143
            self.match(LangParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GE(self):
            return self.getToken(LangParser.GE, 0)

        def LE(self):
            return self.getToken(LangParser.LE, 0)
